Thu Aug 30 12:05:13 2001  J"orn Rennecke <amylaar@redhat.com>

	* tc-h8300.c (tc_crawl_symbol_chain, tc_headers_hook): Don't
	define for BFD_ASSEMBLER.
	(tc_reloc_mangle): Likewise.
	(tc_gen_reloc): New function for BFD_ASSEMBLER.

Wed Aug 29 12:49:58 2001  Jeffrey A Law  (law@cygnus.com)

	* config/tc-h8300.c (h8300hmode): Record the machine type 
	if BFD_ASSEMBLER is defined.
	(h8300smode, md_begin): Similarly.

2001-08-29  Joel Sherrill <joel@OARcorp.com>

	* configure.in (i[3456]86-*-rtems*, m68*-*-rtems*): Change 
	default from coff to elf.
	* configure: Regenerate.

Wed Aug 29 12:05:13 2001  J"orn Rennecke <amylaar@redhat.com>

	* tc-h8300.c: If OBJ_ELF, include elf/h8.h, and define
	assorted coff relocations to the corresponding elf relocations.
	* tc-h8300.h (TARGET_ARCH, TARGET_FORMAT): Define appropriately.

	* configure.in: Add case for h8300-*-elf.
	* configure: Regenerate.

Wed Aug 29 12:05:13 2001  J"orn Rennecke <amylaar@redhat.com>

	* doc/internals.texi (MD_PCREL_FROM_SECTION): Change
	documentation to reflect reality.

2001-08-27  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* tc_mips.c (load_address): Reflect change to MAX_GPREL_OFFSET.
	(macro): Reflect change to MAX_GPREL_OFFSET.

2001-08-27  Torbjorn Granlund  <tege@swox.com>
	    Staffan Ulfberg  <staffanu@swox.se>
	    Linus Nordberg  <linus@swox.se>
	    Alan Modra  <amodra@bigpond.net.au>

	* configure.in: Recognise powerpc*le*, not just powerpcle*.
	* configure: Regenerate.
	* config/tc-ppc.c (PPC_LO, PPC_HI, PPC_HA, PPC_HIGHER,
	PPC_HIGHERA, PPC_HIGHEST, PPC_HIGHESTA, SEX16): New macros.
	(md_assemble): Use them.
	(ppc_machine): Support stub for ELF64 as well as XCOFF.
	(md_pseudo_table): Add "llong", "quad".
	(md_parse_option): Match default_cpu of powerpc*.
	(ppc_arch): Likewise.
	(ppc_subseg_align): Only for OBJ_XCOFF.
	(ppc_target_format): Return elf64-powerpc strings for 64 bit ELF.
	(md_begin): Select PPC_OPCODE_64 for 64 bit.